WIP: setting up env variables with serverless SSM (Simple Systems Manager)
AWS Parameter Store

--- a/serverless.yml
+++ b/serverless.yml
@@ -14,3 +14,5 @@ functions:
       - http:
           path: hello
           method: get
+    environment:
+      NUMVERIFY_API_KEY: ${ssm:numverifyAPIKey}
