CI: updates config files
Specified function name in serverless.yml. Added all modules to Makefile.

--- a/serverless.yml
+++ b/serverless.yml
@@ -9,6 +9,7 @@ package:
     - ./bin/**
 functions:
   validatePhone:
+    name: validatePhone
     handler: bin/validatePhone
     events:
       - http:
