--- a/serverless.yml
+++ b/serverless.yml
@@ -15,21 +15,37 @@ functions:
       - http:
           path: validatePhone
           method: get
+          cors: true
           request:
             parameters:
               querystrings:
                 phoneNumber: true
     environment:
       NUMVERIFY_API_KEY: ${ssm:numverifyAPIKey}
+custom:
+  stageSettings:
+    CacheClusterEnabled: true
+    CacheClusterSize: '0.5'
+    MethodSettings:
+      - ResourcePath: /validatePhone
+        HttpMethod: GET
+        CachingEnabled: true
+        CacheTtlInSeconds: 3600
 resources:
   Resources:
     ApiGatewayMethodValidatephoneGet:
+      Type: AWS::ApiGateway::Method
       Properties:
+        AuthorizationType: NONE
+        HttpMethod: GET
+        ResourceId:
+          Ref: ApiGatewayResourceValidatephone
+        RestApiId:
+          Ref: ApiGatewayRestApi
         RequestParameters:
-          method.request.path.phoneNumber: true
+          method.request.querystring.phoneNumber: true
         Integration:
-          RequestParameters:
-            integration.request.path.phoneNumber: method.request.path.phoneNumber
-            CacheNamespace: ApiGatewayMethodValidatephoneGetCacheNS
-            CacheKeyParameters:
-              - method.request.path.phoneNumber
+          CacheKeyParameters:
+            - method.request.querystring.phoneNumber
+plugins:
+  - serverless-api-stage
