--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: linux-latest
+    runs-on: macOS-latest
     steps:
       - name: Set up Go
         uses: actions/setup-go@v1
@@ -23,7 +23,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: linux-latest
+    runs-on: macOS-latest
     needs: [test]
     steps:
       - name: Set up Go
